--- a/project/perfil.html
+++ b/project/perfil.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -11,6 +11,7 @@
     <title>Perfil</title>
   </head>
   <body>
+      <!--Navbar-->
     <header>
         <div class="container-fluid bg-dark">  
             <nav class="navbar navbar-expand-lg navbar-light bg-dark">
