--- a/project/perfil.html
+++ b/project/perfil.html
@@ -33,6 +33,7 @@
                           <a class="dropdown-item" href="#">conta</a>
                           <a class="dropdown-item" href="#">publicações</a>
                           <a class="dropdown-item" href="#">amigos</a>
+                          <a class="dropdown-item" href="#">grupos/comunidade</a>
                           <a class="dropdown-item" href="#">configurações</a>
                         </div>
                     </div>    
