Pagina de login pronta_front-end
tudo do front end da pagina de login já está pronto.

--- a/project/index.html
+++ b/project/index.html
@@ -52,8 +52,8 @@
         <div id="containerForm">
           <div class="sidenav">
             <div class="login-main-text">
-               <h2>Quem somos nos?</h2>
-               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos itaque qui a doloribus aperiam eveniet ab libero reiciendis culpa nemo? Distinctio voluptate enim nulla sint a, inventore laboriosam praesentium ullam.</p>
+               <h2 style="color: black;">Quem somos nos?</h2>
+               <p style="color: black;">Nós somos uma em empresa que ama animais, com isso tivemos a ideia de criar uma rede social focada nos animais e conteúdos relacionados. Aqui você pode dês de compartilhar as fotos dos seu animais, até compra e venda de produtos para seu bichinho.</p>
             </div>
          </div>
           <div class="main">
@@ -62,15 +62,15 @@
                  <div class="login-form">
                     <form>
                        <div class="form-group" style="padding-top: 5px;">
-                          <label>User Name</label>
-                          <input type="text" class="form-control" placeholder="User Name">
+                          <label>Usuario</label>
+                          <input type="text" class="form-control" placeholder="Usuario">
                        </div>
                        <div class="form-group">
-                          <label>Password</label>
-                          <input type="password" class="form-control" placeholder="Password">
+                          <label>Senha</label>
+                          <input type="password" class="form-control" placeholder="Senha">
                        </div>
-                       <button type="submit" class="btn btn-black">Login</button>
-                       <button type="submit" class="btn btn-black">Register</button>
+                       <button type="submit" class="btn btn-black">Entrar</button>
+                       <button type="submit" class="btn btn-black">Registrar</button>
                     </form>
                  </div>
               </div>
