--- a/project/feed.html
+++ b/project/feed.html
@@ -100,7 +100,7 @@
 
     
     <div class="conteiner" style="margin:auto;" id="caixa" >
-        <div class="card-header"id= "aviso1" style="background-color: white;">
+        <div class="card-header"id= "aviso1" style="background-color: white;" style="padding-bottom: 40px;">
          Bem vindo!
         </div>
         <div class="card-body" style="background-color: white;" >
@@ -115,8 +115,46 @@
 
 
 
-
-
+      <div class="conteiner" style="margin:auto;">
+      <div class="card-body" style="background-color: white;" >
+      <div  style="width: 100%;" id="cpost" ></div>
+        <div id="tab1" class="tab-pane active">
+          <div class="media">
+            <a class="pull-left" href="#"> <img class="media-object mn thumbnail mw50" src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="..."> </a>
+            <div class="media-body">
+              <h5 class="media-heading mb20">Simon Rivers Posted
+                <small> - 3 hours ago</small>
+              </h5>
+              <img src="" class="mw140 mr25 mb20">
+              <img src="" class="mw140 mr25 mb20"> 
+              <img src="" class="mw140 mb20">
+              <div class="media-links">
+                <span class="text-light fs12 mr10">
+                  <span class="fa fa-thumbs-o-up text-primary mr5"></span> Like </span>
+                <span class="text-light fs12 mr10">
+                  <span class="fa fa-share text-primary mr5"></span> Share </span>
+                <span class="text-light fs12 mr10">
+                  <span class="fa fa-floppy-o text-primary mr5"></span> Save </span>
+                <span class="text-light fs12 mr10">
+                  <span class="fa fa-comment text-primary mr5"></span> Comment </span>
+              </div>
+            </div>
+          </div>
+        
+              <div class="media-links">
+                <span class="text-light fs12 mr10">
+                  <span class="fa fa-thumbs-o-up text-primary mr5"></span> Like </span>
+                <span class="text-light fs12 mr10">
+                  <span class="fa fa-share text-primary mr5"></span> Share </span>
+                <span class="text-light fs12 mr10">
+                  <span class="fa fa-floppy-o text-primary mr5"></span> Save </span>
+                <span class="text-light fs12 mr10">
+                  <span class="fa fa-comment text-primary mr5"></span> Comment </span>
+              </div>
+            </div>
+          </div>
+        </div>
+</div>
 </body>
 
 
