--- a/project/feed.html
+++ b/project/feed.html
@@ -13,7 +13,8 @@
   <body>
   <!--Navbar-->
     
-  <div class="container-fluid bg-dark">  
+  <div class="container-fluid bg-dark">
+
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
         <img src="https://www.pngkit.com/png/full/145-1456357_corgi-dog-pembroke-welsh-corgi-png.png" width="40">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,11 +54,19 @@
                   <a class="dropdown-item" href="#">Action</a>
                   <a class="dropdown-item" href="#">Another action</a>
                   <a class="dropdown-item" href="#">Something else here</a>
-                </div>
+
+                </div >
             </div>  
         </div>
     </nav>
-</div>          
+</div>
+
+
+  
+
+ 
+
+
 
     <!--Primeiro Cartão do feed-->
 
@@ -124,6 +133,34 @@
     </div>
   </div>
 </div> -->
+
+
+
+
+
+
+
+
+
+
+
+  <div class="card" style="width: 18rem;" id="indica">
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item" img="" style="height:50px ;"></li>
+    <li class="list-group-item" img="" style="height:50px ;"></li>
+    <li class="list-group-item" img=""style="height:50px ;" ></li>
+    <li class="list-group-item" img=""style="height:50px ;" ></li>
+    <li class="list-group-item" img=""style="height:50px ;" ></li>
+  </ul>
+  <div class="card-footer" >
+   
+  </div>
+</div>
+
+
+
+
+
     
     <!--Javacsript-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
