--- a/project/feed.html
+++ b/project/feed.html
@@ -13,9 +13,9 @@
   <body>
   <!--Navbar-->
     
-  <div class="container-fluid bg-dark">  
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-        <img src="https://www.pngkit.com/png/full/145-1456357_corgi-dog-pembroke-welsh-corgi-png.png" width="40">
+<div class="container-fluid bg-dark">  
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+      <img src="https://www.pngkit.com/png/full/145-1456357_corgi-dog-pembroke-welsh-corgi-png.png" width="40">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -54,10 +54,16 @@
                   <a class="dropdown-item" href="#">Another action</a>
                   <a class="dropdown-item" href="#">Something else here</a>
                 </div>
-            </div>  
+            </div> 
+            <div class="input-group mb-3" style="padding-left: 2%;">
+              <input type="text" class="form-control" placeholder="Pesquisa" aria-label="Recipient's username" aria-describedby="button-addon2">
+              <div class="input-group-append">
+                <button class="btn btn-outline-secondary" type="button" id="button-addon2">Procurar</button>
+              </div>
+            </div>               
         </div>
     </nav>
-</div>          
+</div>        
 
     <!--Primeiro Cartão do feed-->
 
