--- a/project/register.html
+++ b/project/register.html
@@ -55,7 +55,13 @@
                     <a class="dropdown-item" href="#">Another action</a>
                     <a class="dropdown-item" href="#">Something else here</a>
                   </div>
-              </div>  
+              </div> 
+              <div class="input-group mb-3" style="padding-left: 2%;">
+                <input type="text" class="form-control" placeholder="Pesquisa" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <div class="input-group-append">
+                  <button class="btn btn-outline-secondary" type="button" id="button-addon2">Procurar</button>
+                </div>
+              </div>               
           </div>
       </nav>
   </div>
