--- a/project/register.html
+++ b/project/register.html
@@ -97,7 +97,7 @@
                 <label for="inputDataNascimento">Data Nascimento</label>
                 <input type="text" class="form-control" id="inputDataNascimento" placeholder="22/04/2002">
           </div>
-          <button type="submit" class="btn btn-primary" style="height: 50%; width: 50%; margin-top: 10%;">Sign in</button>
+          <button type="submit" class="btn btn-primary" style="height: 50%; width: 50%; margin-top: 10%;">Registrar-se!</button>
       </form>
     </div>
       
