--- a/project/feed.html
+++ b/project/feed.html
@@ -77,8 +77,8 @@
         <h5 class="card-title">Special title treatment</h5>
         <p class="card-text">With supporting text below as a natural lead-in to additional conteudo.</p>
           <div class="container-fluid"></div>
-           <textarea class="conteiner"id="textarea" rows="1" over-line></textarea>
-           &nbsp; &nbsp;<a href="#" class="btn btn-primary">postar</a> 
+           <textarea class="conteiner"id="textarea" style="width:400px; height:110px;" ></textarea>
+          <a href="#" class="btn btn-primary">postar</a> 
          </div>
       </div>
     </div>
@@ -88,7 +88,7 @@
   <!---Segundo cartão do perfil-->
    
 <div class="conteiner" style="margin:auto;" id="caixa" >
-  <div class="card-header"id= "aviso1" style="background-color: white;" style="padding-bottom: 40px;">
+  <div class="card-header"id= "aviso1" style="background-color:#ffffff;"style="padding-bottom: 40px;" >
    Bem vindo!
   </div>
   <div class="card-body" style="background-color: white;" >
@@ -146,13 +146,14 @@
 
   <div class="card" style="width: 18rem;" id="indica">
   <ul class="list-group list-group-flush">
+    <div class="card-header" style="background-color: #fde362;" ></div>
     <li class="list-group-item" img="" style="height:50px ;"></li>
     <li class="list-group-item" img="" style="height:50px ;"></li>
     <li class="list-group-item" img=""style="height:50px ;" ></li>
     <li class="list-group-item" img=""style="height:50px ;" ></li>
     <li class="list-group-item" img=""style="height:50px ;" ></li>
   </ul>
-  <div class="card-footer" >
+  <div class="card-footer" style="background-color: #fde362;" >
    
   </div>
 </div>
