--- a/project/feed.html
+++ b/project/feed.html
@@ -94,14 +94,14 @@
   <!---Segundo cartão do perfil-->
    
 <div class="conteiner" style="margin:auto;" id="caixa" >
-  <div class="card-header"id= "aviso1" style="background-color:#ffffff;"style="padding-bottom: 40px;" >
+  <div class="card-header"id= "aviso1" style="background-color:#fae57c;"style="padding-bottom: 40px;" >
    Bem vindo!
   </div>
   <div class="card-body" style="background-color: white;" >
     <h5 class="card-title">Configure seu perfil</h5>
     <p class="card-text">Com suas configuracoes completas poderemos oferecer um serviço mais adequado ao seu perfil alem de facilitar sua busca de paginas preferenciais</p>
     <a href="#" class="btn btn-primary" >Configurar</a>
-    <a href="#" class="btn btn-primary">Primeiro post</a>
+    <a href="#" class="btn btn-primary" >Primeiro post</a>
   </div>
   <div class="conteiner" id="conteinerDoPost"> 
     
