--- a/project/feed.html
+++ b/project/feed.html
@@ -100,8 +100,8 @@
   <div class="card-body" style="background-color: white;" >
     <h5 class="card-title">Configure seu perfil</h5>
     <p class="card-text">Com suas configuracoes completas poderemos oferecer um serviço mais adequado ao seu perfil alem de facilitar sua busca de paginas preferenciais</p>
-    <a href="#" class="btn btn-primary" >Configurar</a>
-    <a href="#" class="btn btn-primary" >Primeiro post</a>
+    <a href="#" class="btn btn-primary" style="background-color:#fde362" >Configurar</a>
+    <a href="#" class="btn btn-primary" style="background-color:#fde362"  >Primeiro post</a>
   </div>
   <div class="conteiner" id="conteinerDoPost"> 
     
