--- a/project/feed.html
+++ b/project/feed.html
@@ -149,9 +149,20 @@
 
 
 
+<!--Card de amigos online e publicidade -->
+
 
   <div class="card" style="width: 18rem;" id="indica">
   <ul class="list-group list-group-flush">
+    <div class="card-header" style="background-color: #fde362;" >Publicidade</div>
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit voluptatum saepe</p>
+    </div>
+    <li class="list-group-item" img="" style="height:50px ;"></li>
+
+    <div class="card-footer" style="background-color: #fde362;" >Amigos online</div>
     <div class="card-header" style="background-color: #fde362;" ></div>
     <li class="list-group-item" img="" style="height:50px ;"></li>
     <li class="list-group-item" img="" style="height:50px ;"></li>
@@ -163,6 +174,42 @@
    
   </div>
 </div>
+
+
+
+
+<!--card lateral esquerd-->
+
+<div class="card"  id="card2">
+ 
+  <div class="card-body">
+    <img src="..." class="card-img-top" alt="...">
+    <a href="#" class="card-link">Perfil</a>
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item" style="height: 70px;">Cras justo odio</li>
+    <li class="list-group-item" style="height: 70px;">Dapibus ac facilisis in</li>
+    <li class="list-group-item" style="height: 70px;">Vestibulum at eros</li>
+  </ul>
+  <div class="card-body">
+    <a href="#" class="card-link" style="height: 70px;">Card link</a>
+    <a href="#" class="card-link" style="height: 70px;">Another link</a>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
