--- a/project/feed.html
+++ b/project/feed.html
@@ -76,11 +76,11 @@
 
     <!--Primeiro Cartão do feed-->
 
-<div id="caixa" style="padding-bottom: 50px;">
+<div   id="caixa2">
   <div class="card-body" >
-    <div class="card text-center"  style="margin:auto;"  id="caixa2">
+    <div class="card text-center"  style="width: 710px;"   >
       <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
+        <h5 class="card-title" >Special title treatment</h5>
         <p class="card-text">With supporting text below as a natural lead-in to additional conteudo.</p>
           <div class="container-fluid"></div>
            <textarea class="conteiner"id="textarea" style="width:400px; height:110px;"  ></textarea>
@@ -152,7 +152,7 @@
 <!--Card de amigos online e publicidade -->
 
 
-  <div class="card" style="width: 18rem;" id="indica">
+  <div class="card" style="width: 350px;" id="indica">
   <ul class="list-group list-group-flush">
     <div class="card-header" style="background-color: #fde362;" >Publicidade</div>
     <img src="..." class="card-img-top" alt="...">
@@ -180,7 +180,7 @@
 
 <!--card lateral esquerd-->
 
-<div class="card"  id="card2">
+<div class="card"  id="card2" style="height: 450px;">
  
   <div class="card-body">
     <img src="..." class="card-img-top" alt="...">
