--- a/project/feed.html
+++ b/project/feed.html
@@ -84,7 +84,11 @@
         <p class="card-text">With supporting text below as a natural lead-in to additional conteudo.</p>
           <div class="container-fluid"></div>
            <textarea class="conteiner"id="textarea" style="width:400px; height:110px;"  ></textarea>
-          <a href="#" class="btn btn-primary">postar</a> 
+           <div style="overflow: auto;">
+          <a href="#" class="btn btn-primary">postar</a>
+          <a img="" href="#" class="btn btn-primary">transmitir</a>
+          <a img="" href="#" class="btn btn-primary">fotos</a>
+          </div>
          </div>
       </div>
     </div>
@@ -180,12 +184,18 @@
 
 <!--card lateral esquerd-->
 
-<div class="card"  id="card2" style="height: 450px;">
+<div class="card"  id="card2" style="height: 450px;" style="text-align: center;">
  
-  <div class="card-body">
-    <img src="..." class="card-img-top" alt="...">
-    <a href="#" class="card-link">Perfil</a>
+  
+    <div class="card-body" >
+
+    <div class="media-body va-m" 
+    >
+      <h3 class="media-heading">Guilherme santana
+        
+      </h3>
   </div>
+<hr>
   <ul class="list-group list-group-flush">
     <li class="list-group-item" style="height: 70px;">Cras justo odio</li>
     <li class="list-group-item" style="height: 70px;">Dapibus ac facilisis in</li>
