--- a/project/feed.html
+++ b/project/feed.html
@@ -24,21 +24,21 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
               <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-house-door-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg" style="width: 50px; height: 30px; padding-top:10">
-                  <path d="M6.5 10.995V14.5a.5.5 0 0 1-.5.5H2a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .146-.354l6-6a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 .146.354v7a.5.5 0 0 1-.5.5h-4a.5.5 0 0 1-.5-.5V11c0-.25-.25-.5-.5-.5H7c-.25 0-.5.25-.5.495z"/>
+                  <path d="M6.5 10.995V14.5a.5.5 0 0 1-.5.5H2a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .146-.354l6-6a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 .146.354v7a.5.5 0 0 1-.5.5h-4a.5.5 0 0 1-.5-.5V11c0-.25-.25-.5-.5-.5H7c-.25 0-.5.25-.5.495z" />
                   <path fill-rule="evenodd" d="M13 2.5V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
                 </svg>
               <div class="dropdown">
                   <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Perfil
                   </button>
-                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" >
                     <a class="dropdown-item" href="#">Action</a>
                     <a class="dropdown-item" href="#">Another action</a>
                     <a class="dropdown-item" href="#">Something else here</a>
                   </div>
               </div>    
               <div class="dropdown">
-                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="margin-left: 10px">
+                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="margin-left: 20px ; ">
                     Linha do tempo
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -48,7 +48,7 @@
                   </div>
               </div>   
               <div class="dropdown">
-                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="margin-left: 10px">
+                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="margin-left: 20px ; margin-right: 20px;" >
                     Serviços
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -58,7 +58,7 @@
                   </div>
               </div> 
               <div class="input-group mb-3" style="padding-left: 2%;">
-                <input type="text" class="form-control" placeholder="Pesquisa" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <input type="text" class="form-control" placeholder="Pesquisa" aria-label="Recipient's username" aria-describedby="button-addon2" >
                 <div class="input-group-append">
                   <button class="btn btn-outline-secondary" type="button" id="button-addon2">Procurar</button>
                 </div>
@@ -168,11 +168,11 @@
 
     <div class="card-footer" style="background-color: #fde362;" >Amigos online</div>
     <div class="card-header" style="background-color: #fde362;" ></div>
-    <li class="list-group-item" img="" style="height:50px ;"></li>
-    <li class="list-group-item" img="" style="height:50px ;"></li>
-    <li class="list-group-item" img=""style="height:50px ;" ></li>
-    <li class="list-group-item" img=""style="height:50px ;" ></li>
-    <li class="list-group-item" img=""style="height:50px ;" ></li>
+    <li class="list-group-item" img="" style="height:60px ;"></li>
+    <li class="list-group-item" img="" style="height:60px ;"></li>
+    <li class="list-group-item" img=""style="height:60px ;" ></li>
+    <li class="list-group-item" img=""style="height:60px ;" ></li>
+    <li class="list-group-item" img=""style="height:60px ;" ></li>
   </ul>
   <div class="card-footer" style="background-color: #fde362;" >
    
@@ -191,19 +191,19 @@
 
     <div class="media-body va-m" 
     >
-      <h3 class="media-heading">Guilherme santana
+      <h2 class="media-heading">Guilherme santana
         
-      </h3>
+      </h2>
   </div>
 <hr>
   <ul class="list-group list-group-flush">
-    <li class="list-group-item" style="height: 70px;">Cras justo odio</li>
-    <li class="list-group-item" style="height: 70px;">Dapibus ac facilisis in</li>
-    <li class="list-group-item" style="height: 70px;">Vestibulum at eros</li>
+    <li class="list-group-item" style="height: 70px; font-size:large;">Transmições</li>
+    <li class="list-group-item" style="height: 70px;font-size:large;">Seviços</li>
+    <li class="list-group-item" style="height: 70px;font-size:large;">Desconectar</li>
   </ul>
   <div class="card-body">
-    <a href="#" class="card-link" style="height: 70px;">Card link</a>
-    <a href="#" class="card-link" style="height: 70px;">Another link</a>
+    <a href="#" class="card-link" style="height: 70px;font-size: larger;">Card link</a>
+    <a href="#" class="card-link" style="height: 70px; font-size: larger;">Another link</a>
   </div>
 </div>
 
