--- a/project/feed.html
+++ b/project/feed.html
@@ -156,7 +156,7 @@
 <!--Card de amigos online e publicidade -->
 
 
-  <div class="card" style="width: 350px;" id="indica">
+  <div class="card" style="width: 350px;" id="card1">
   <ul class="list-group list-group-flush">
     <div class="card-header" style="background-color: #fde362;" >Publicidade</div>
     <img src="..." class="card-img-top" alt="...">
@@ -182,9 +182,9 @@
 
 
 
-<!--card lateral esquerd-->
+<!--card branco-->
 
-<div class="card"  id="card2" style="height: 450px;" style="text-align: center;">
+<div class="card"  id="card2" style="height: 450px; width:350px;" style="text-align: center;">
  
   
     <div class="card-body" >
